test_regress/t/t_param_up_bad.out
%Error: t/t_param_up_bad.v:14:18: Can't find definition of scope/variable: 'bar'
   14 |   assign a_bad = bar.foo;
      |                  ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
